--- a/style.css
+++ b/style.css
@@ -2523,7 +2523,7 @@ button {
       width: 100%;
       height: 500px;
       background: #FFE8D6;
-      margin-top: 10%;
+      margin-top: 25%;
       padding-left: 5%;
       padding-right: 5%;
    }
@@ -3115,10 +3115,11 @@ button {
    }
 
    .access-rect {
-      width: 585px;
+      width: 92%;
       height: 475px;
       background: #FFE8D6;
-      margin-left: 17%;
+      margin-left: 0%;
+      left: 0;
    }
 
    .access-title {
@@ -3166,10 +3167,141 @@ button {
    /* Contact us - About */
    .contact-a {
       display: grid;
-      grid-template-columns: 37% 63%;
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-rows: 50% 50%;
       width: 100%;
-      height: 527px;
+      height: 1350px;
+      margin-top: 25%;
+   }
+   
+   .contact-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #3E4656;
+   }
+   
+   .c-address {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 11%;
+   }
+   
+   .c-phone {
+      font-size: 25px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 6%;
+   }
+   
+   .c-email {
+      font-size: 25px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 6%;
+   }
+   
+   .c-time {
+      font-size: 25px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 6%;
+   }
+   
+   .envelope {
       margin-top: 10%;
+   }
+   
+   /* Contact input */
+   .contact-input {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #EEF3FA;
+   }
+   
+   .contact-input h1 {
+      font-size: 57px;
+      font-weight: 600;
+      margin-top: 10%;
+   }
+   
+   .i-name {
+      width: 80%;
+      height: 60px;
+      font-size: 18px;
+      font-weight: 400;
+      border: none;
+      padding-left: 6%;
+      outline: none;
+      margin-top: 8.7%;
+      padding-right: 2.5%;
+   }
+   
+   .i-name::placeholder {
+      color: #000;
+   }
+   
+   .i-email {
+      width: 80%;
+      height: 60px;
+      font-size: 18px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 5%;
+      padding-right: 2.5%;
+   }
+   
+   .i-email::placeholder {
+      color: #000;
+   }
+   
+   .i-msg {
+      width: 80%;
+      height: 120px;
+      font-size: 18px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 5%;
+      resize: none;
+      font-family: "Nunito";
+      padding-top: 1.2%;
+      padding-right: 2.5%;
+   }
+   
+   .i-msg::placeholder {
+      color: #000;
+   }
+   
+   .i-button {
+      width: 300px;
+      height: 62px;
+      background: #2B3038;
+      border: 1px #2B3038 solid;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 100;
+      margin-top: 8%;
+   }
+
+   /* Footer */
+   .footer {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      height: 350px;
+      padding-left: 4%;
+      padding-right: 4%;
    }
 }
