--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ button {
    display: none;
 }
 
+.menu-burger {
+   display: none;
+}
+
 /* Landing Page */
 .landing-p {
    display: flex;
@@ -1007,7 +1011,7 @@ button {
       height: 60px;
       box-shadow: rgba(0, 0, 0, 0.06) -3px 4px 4px 0px;
       position: fixed;
-      z-index: 1;
+      z-index: 3;
       background: #fff;
    }
    
@@ -1029,6 +1033,7 @@ button {
       display: block;
       position: relative;
       margin-right: 6%;
+      z-index: 30;
    }
 
    .burger-line {
@@ -1054,6 +1059,43 @@ button {
 
    .burger-line::after {
       transform: translateY(11px);
+   }
+
+   .menu-burger {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100vh;
+      background: #3E4656;
+      position: fixed;
+      z-index: 2;
+      transform: translateX(-100%);
+      transition: ease 500ms;
+   }
+
+   .open-menu {
+      left: 0;
+   }
+
+   .open-burger::after {
+      transform: rotate(45deg);
+   }
+
+   .open-burger::before {
+      transform: rotate(-45deg);
+   }
+
+   .menu-burger li {
+      list-style: none;
+      font-size: 30px;
+      margin-top: 15%;
+   }
+
+   .menu-burger a {
+      text-decoration: none;
+      color: #fff;
    }
    
    .nav ul {
