--- a/style.css
+++ b/style.css
@@ -167,8 +167,8 @@ button {
    display: flex;
    justify-content: space-evenly;
    width: 115px;
-   margin-left: 61.3%;
-   margin-top: 41.5%;
+   left: 88%;
+   top: 93.5%;
    position: absolute;
 }
 
@@ -2247,7 +2247,7 @@ button {
       height: 80px;
       box-shadow: rgba(0, 0, 0, 0.06) -3px 4px 4px 0px;
       position: fixed;
-      z-index: 1;
+      z-index: 3;
       background: #fff;
    }
    
@@ -2269,6 +2269,8 @@ button {
       display: block;
       position: relative;
       margin-right: 6%;
+      z-index: 30;
+      cursor: pointer;
    }
 
    .burger-line {
@@ -2286,6 +2288,7 @@ button {
       height: 4px;
       background: #1b1a1a;
       border-radius: 15px;
+      transition: ease 300ms;
    }
 
    .burger-line::before {
@@ -2295,11 +2298,71 @@ button {
    .burger-line::after {
       transform: translateY(11px);
    }
+
+   .menu-burger {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100vh;
+      background: #3E4656;
+      position: fixed;
+      z-index: 2;
+      right: -100%;
+      transition: 450ms;
+   }
+
+   .openM {
+      right: 0;
+   }
+
+   .open .burger-line::after {
+      transform: rotate(-45deg);
+   }
+
+   .open .burger-line::before {
+      transform: rotate(45deg);
+   }
+
+   .open .burger-line {
+      background: none;
+   }
+
+   .menu-burger li {
+      list-style: none;
+      font-size: 45px;
+      margin-top: 15%;
+   }
+
+   .menu-burger a {
+      text-decoration: none;
+      color: #fff;
+      position: relative;
+      padding-bottom: 4px;
+   }
    
    .nav ul {
       display: none;
    }
-   
+
+   .nav-link::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      transform-origin: left;
+      transition: ease 400ms;
+      transform: scale(0);
+      bottom: 0;
+      left: 0;
+   }
+
+   .nav-link:hover::after {
+      transform: scale(1);
+   }
+
    /* Landing Page */
    .landing-p {
       display: flex;
